# mcp_extensions_python

./: .project  README.md  pyproject.toml
.github/workflows/: release.yml
mcptoolgroups/: pyproject.toml
mcptoolgroups/examples/: tg_memory.py
mcptoolgroups/src/mcptoolgroups/: __init__.py
org.openmcptools.extensions.grouping/: main.py  pyproject.toml
org.openmcptools.extensions.grouping/src/org/openmcptools/extensions/: grouping.py
org.openmcptools.extensions.groups/: .project
org.openmcptools.extensions.groups/src/: common.py  converters.py  groupext.py
org.openmcptools.extensions.groups/tests/: test_common.py
org.openmcptools.extensions.update/: .project
org.openmcptools.extensions.update/src/: updateext.py
toolgroups/: .pydevproject  README.md  pyproject.toml
toolgroups/.github/workflows/: pypi_release.yml
toolgroups/examples/: tg_server_class.py
toolgroups/src/toolgroups/: __init__.py
