[project]
name = "toolgroups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Lewis", email = "scottslewis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [ "mcp" ]

[tool.uv.sources]
mcp = { git = "git+https://github.com/modelcontextprotocol/python-sdk" }

[project.scripts]
toolgroups = "toolgroups:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
